--- a/app/globals.css
+++ b/app/globals.css
@@ -58,6 +58,7 @@ body {
   -webkit-text-fill-color: transparent;
   background-size: cover;
   background-position: center;
+  font-display: swap;
   font-family: 'Montserrat', sans-serif;
 }
 
